--- a/crates/screenpipe-server/Cargo.toml
+++ b/crates/screenpipe-server/Cargo.toml
@@ -111,6 +111,7 @@ dashmap = { workspace = true }
 env_logger = "0.10"
 tempfile = "3.3.0"
 tokio-tungstenite = "0.24"
+tower = { version = "0.5", features = ["util"] }
 
 # Benches
 criterion = { workspace = true }
